Correções do Lucas

--- a/chapter2.tex
+++ b/chapter2.tex
@@ -41,12 +41,11 @@ cascata~\cite{article:cutler}.
 
 Seu impacto na indústria foi gigante. Provavelmente não há nenhuma empresa
 extratora de petróleo que não utilize esta técnica ou uma derivada. O
-desenvolvimento inical do \ac{MPC} se deu como uma tentativa de entender o
-\ac{DMC}, que parecia desafiar a análise teórica tradicional por ser formulado
-de maneira não convencional. Por exemplo, outra técnica, a \ac{IMC} ---
-\textit{Internal Model Control} --- falhou em explicar o funcionamento da DMC
-mas acabou ajudando no desenvolvimento do controle
-robusto~\cite{article:morari}.
+desenvolvimento do \ac{MPC} se deu como uma tentativa de entender o \ac{DMC},
+que parecia desafiar a análise teórica tradicional por ser formulado de maneira
+não convencional. Por exemplo, outra técnica, a \ac{IMC} --- \textit{Internal
+Model Control} --- falhou em explicar o funcionamento da DMC mas acabou ajudando
+no desenvolvimento do controle robusto~\cite{article:morari}.
 
 Hoje em dia o controle preditivo é formulado sempre em espaço de estados, mesmo
 que seja possível sua formulação por, por exemplo, funções de transferência.
